objects/DAZN_Help_Redirect__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>DAZN Help Redirect settings use to redirect the respective page</description>
    <fields>
        <fullName>CountryISOCode__c</fullName>
        <label>CountryISOCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FooterAboutLinkCustomLabel__c</fullName>
        <label>Footer About Link Custom Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FooterAboutTitleCustomLabel__c</fullName>
        <label>Footer About Title Custom Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDefaultCountry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefaultCountry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDefaultLanguage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefaultLanguage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LanguageLongCode__c</fullName>
        <label>Language Long Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>DAZN Help Redirect</label>
</CustomObject>